--- a/index.html
+++ b/index.html
@@ -43,18 +43,20 @@
         }
 
         .nav-link {
-            display: inline-block;
-            margin: 20px 0;
-            padding: 10px 20px;
-            background-color: #3498db;
-            color: white;
+            display: block;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            color: #3498db;
             text-decoration: none;
-            border-radius: 5px;
             font-weight: bold;
+            text-align: center;
+            transition: box-shadow 0.3s ease;
         }
 
         .nav-link:hover {
-            background-color: #2980b9;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         }
 
         .intro {
@@ -100,7 +102,7 @@
                 <p>时光号是一个致力于为用户提供独特社交体验的平台。在这里，每一刻都值得被记录，每一个故事都值得被分享。</p>
             </section>
 
-            <a href="pdf-list.html" class="nav-link">查看PDF文件列表</a>
+            <a href="pdf-list.html" class="nav-link">传递我们的温度</a>
 
             <div class="features">
                 <div class="feature-card">
