--- a/pdf-list.html
+++ b/pdf-list.html
@@ -144,25 +144,25 @@
 <body>
     <div class="container">
         <header>
-            <h1>PDF文件列表</h1>
-            <p>点击查看和浏览PDF文件</p>
+            <h1>指南列表</h1>
+            <p>点击查看和浏览指南文件</p>
         </header>
         
         <a href="index.html" class="back-link">← 返回首页</a>
         
         <main>
             <section class="pdf-list">
-                <h2>可用的PDF文件</h2>
+                <h2>可用的指南文件</h2>
                 <div class="pdf-item" onclick="viewPdf('zn/慢性乙型肝炎防治指南(2022年版).pdf', '慢性乙型肝炎防治指南(2022年版)')">
                     <h3>慢性乙型肝炎防治指南(2022年版)</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
                 <div class="pdf-item" onclick="viewPdf('zn/结.pdf', '结')">
-                    <h3>结</h3>
+                    <h3>2023结直肠癌诊疗指南</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
                 <div class="pdf-item" onclick="viewPdf('zn/肝癌指南.pdf', '肝癌指南')">
-                    <h3>肝癌指南</h3>
+                    <h3>2024肝癌指南</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
             </section>
