--- a/pdf-list.html
+++ b/pdf-list.html
@@ -153,7 +153,7 @@
         <main>
             <section class="pdf-list">
                 <h2>可用的指南文件</h2>
-                <div class="pdf-item" onclick="viewPdf('zn/慢性乙型肝炎防治指南(2022年版).pdf', '慢性乙型肝炎防治指南(2022年版)')">
+                <div class="pdf-item" onclick="viewPdf('zn/乙肝.pdf', '乙肝')">
                     <h3>慢性乙型肝炎防治指南(2022年版)</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
