--- a/pdf-list.html
+++ b/pdf-list.html
@@ -153,15 +153,15 @@
         <main>
             <section class="pdf-list">
                 <h2>可用的指南文件</h2>
-                <div class="pdf-item" onclick="viewPdf('zn/乙肝.pdf', '乙肝')">
+                <div class="pdf-item" onclick="viewPdf('zn/乙肝.pdf', '慢性乙型肝炎防治指南(2022年版)')">
                     <h3>慢性乙型肝炎防治指南(2022年版)</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
-                <div class="pdf-item" onclick="viewPdf('zn/结.pdf', '结')">
+                <div class="pdf-item" onclick="viewPdf('zn/结.pdf', '2023结直肠癌诊疗指南')">
                     <h3>2023结直肠癌诊疗指南</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
-                <div class="pdf-item" onclick="viewPdf('zn/肝癌指南.pdf', '肝癌指南')">
+                <div class="pdf-item" onclick="viewPdf('zn/肝癌指南.pdf', '2024肝癌指南')">
                     <h3>2024肝癌指南</h3>
                     <p>点击查看PDF文件内容</p>
                 </div>
