--- a/pdf-list.html
+++ b/pdf-list.html
@@ -222,6 +222,11 @@
                     <p>点击查看PDF文件内容</p>
                     <a href="#" class="download-btn" onclick="event.stopPropagation(); downloadPdf('zn/肝癌指南.pdf', '2024肝癌指南.pdf')">下载PDF</a>
                 </div>
+                <div class="pdf-item" onclick="window.location.href='hcc-predict.html'">
+                    <h3>肝癌复发预测工具</h3>
+                    <p>点击进入肝癌复发风险预测计算器</p>
+                    <a href="hcc-predict.html" class="download-btn">开始预测</a>
+                </div>
             </section>
             
             <section class="pdf-viewer" id="pdfViewer">
