--- a/hcc-predict.html
+++ b/hcc-predict.html
@@ -171,7 +171,7 @@
     <div class="container">
         <header>
             <h1>肝癌风险预测工具</h1>
-            <p>基于POLAR-HCC模型的肝癌风险评估计算器</p>
+            <p>基于POLAR-HCC模型的肝癌风险评估计算器 ： https://online--calculator.shinyapps.io/POLAR-HCC/</p>
         </header>
         
         <a href="pdf-list.html" class="back-link">← 返回指南列表</a>
@@ -202,40 +202,16 @@
                     <h3>常见术语中英文对照</h3>
                     <div class="term-list">
                         <div class="term-item">
-                            <div class="term-english">Age</div>
-                            <div class="term-chinese">年龄</div>
-                        </div>
-                        <div class="term-item">
-                            <div class="term-english">Gender</div>
+                            <div class="term-english">Sex</div>
                             <div class="term-chinese">性别</div>
                         </div>
                         <div class="term-item">
-                            <div class="term-english">BMI</div>
-                            <div class="term-chinese">体重指数</div>
+                            <div class="term-english">Female</div>
+                            <div class="term-chinese">女性</div>
                         </div>
                         <div class="term-item">
-                            <div class="term-english">Diabetes</div>
-                            <div class="term-chinese">糖尿病</div>
-                        </div>
-                        <div class="term-item">
-                            <div class="term-english">Hypertension</div>
-                            <div class="term-chinese">高血压</div>
-                        </div>
-                        <div class="term-item">
-                            <div class="term-english">ALT</div>
-                            <div class="term-chinese">谷丙转氨酶</div>
-                        </div>
-                        <div class="term-item">
-                            <div class="term-english">AST</div>
-                            <div class="term-chinese">谷草转氨酶</div>
-                        </div>
-                        <div class="term-item">
-                            <div class="term-english">Platelet</div>
-                            <div class="term-chinese">血小板</div>
-                        </div>
-                        <div class="term-item">
-                            <div class="term-english">AFP</div>
-                            <div class="term-chinese">甲胎蛋白</div>
+                            <div class="term-english">Male</div>
+                            <div class="term-chinese">男性</div>
                         </div>
                         <div class="term-item">
                             <div class="term-english">Risk Score</div>
@@ -246,8 +222,56 @@
                             <div class="term-chinese">计算</div>
                         </div>
                         <div class="term-item">
-                            <div class="term-english">Reset</div>
-                            <div class="term-chinese">重置</div>
+                            <div class="term-english">Cirrhosis</div>
+                            <div class="term-chinese">肝硬化</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Tumor Number</div>
+                            <div class="term-chinese">肿瘤数量</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Solitary</div>
+                            <div class="term-chinese">单个</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Multiple</div>
+                            <div class="term-chinese">多个</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Satellites</div>
+                            <div class="term-chinese">卫星灶</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Tumor Size</div>
+                            <div class="term-chinese">肿瘤大小</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Macrovascular Invasion</div>
+                            <div class="term-chinese">大血管侵犯</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Microvascular Invasion</div>
+                            <div class="term-chinese">微血管侵犯</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Predicted recurrence rate at this follow-up (Months)</div>
+                            <div class="term-chinese">随访期间预测复发率（月）</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Risk Stratification for Late Recurrence</div>
+                            <div class="term-chinese">晚期复发风险分层</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Predicted Recurrence Rate</div>
+                            <div class="term-chinese">预测复发率</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">Low-Risk</div>
+                            <div class="term-chinese">低风险</div>
+                        </div>
+                        <div class="term-item">
+                            <div class="term-english">High-Risk</div>
+                            <div class="term-chinese">高风险</div>
                         </div>
                     </div>
                 </div>
